# formed

./: .editorconfig  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: ci.yml  docs.yml  pypi-publish.yml
docs/: index.md  quick_start.md
docs/api_reference/: index.md  workflow.md
docs/api_reference/integrations/: flax.md  ml.md
docs/guides/: index.md  workflow.md
docs/guides/integrations/: ml.md  torch.md
docs/reference/: index.md  workflow.md
docs/reference/integrations/: datasets.md  mlflow.md  sentence_transformers.md  torch.md  transformers.md
docs/tutorials/: causal_lm_finetuning.md  index.md  text_classification.md
examples/: torch_classification_example.py  torch_modules_example.py  torch_workflow_example.py
examples/causallm/: config.jsonnet  formed.yml
examples/euler/: config.jsonnet  euler.py  formed.yml
examples/regression/: config.jsonnet  formed.yml  regression.py
examples/text_classification/: README.md  config.jsonnet  formed.yml  text_classification.py
examples/text_classification/configs/: finetuning_torch.jsonnet  toy_flax.jsonnet  toy_torch.jsonnet
examples/text_classification/textclf/: datamodules.py  evaluators.py  flax.py  steps.py  torch.py  types.py
examples/time_series_forecasting/: README.md  __init__.py  config.jsonnet  formed.yml  time_series.py
examples/torch/: ddp.py  early_stopping.py
formed/: settings.py
formed/common/: xutils.py
formed/integrations/datasets/: workflow.py
formed/integrations/flax/: __init__.py  data.py  model.py  training.py  types.py  utils.py  workflow.py
formed/integrations/ml/: __init__.py  dataloader.py  datamodule.py  dataset.py  fields.py  indexers.py  steps.py  transforms.py  types.py  utils.py  workflow.py
formed/integrations/sentence_transformers/: workflow.py
formed/integrations/transformers/: training.py  workflow.py
formed/workflow/: __init__.py  executor.py  format.py  step.py  utils.py
guides/: index.html
guides/integrations/ml/: index.html
guides/integrations/torch/: index.html
guides/workflow/: index.html
quick_start/: index.html
reference/: index.html
reference/integrations/datasets/: index.html
reference/integrations/flax/: index.html
reference/integrations/ml/: index.html
reference/integrations/mlflow/: index.html
reference/integrations/sentence_transformers/: index.html
reference/integrations/torch/: index.html
reference/integrations/transformers/: index.html
reference/workflow/: index.html
search/: search_index.json
src/formed/: __main__.py  settings.py  types.py
src/formed/commands/: __init__.py  workflow.py
src/formed/common/: attributeutils.py  base58.py  dag.py  dataset.py  git.py  hashutils.py  iterutils.py  jsonnet.py  jsonschema.py  nlputils.py  pkgutils.py  rich.py
src/formed/workflow/: __init__.py  archive.py  cache.py  callback.py  colt.py  executor.py  format.py  graph.py  jsonschema.py  organizer.py  step.py  utils.py
tests/: conftest.py  test_formed.py
tests/commands/: test_workflow_command.py
tests/common/: test_astutils.py  test_base58.py  test_dag.py  test_hashutils.py  test_iterutils.py
tests/integrations/datasets/: test_workflow.py
tests/integrations/flax/: __init__.py  test_modules.py  test_training.py
tests/integrations/ml/: test_dataloader.py  test_datamodule.py  test_metrics.py  test_transforms.py  test_workflow.py
tests/integrations/sentence_transformers/: test_utils.py  test_workflow.py
tests/workflow/: test_archive.py  test_executor.py  test_format.py  test_step.py
tutorials/: index.html
tutorials/causal_lm_finetuning/: index.html
tutorials/text_classification/: index.html
(+85 files in other folders)
