[project]
name = "formed"
version = "0.0.3"
description = "⚙️ Flexible framework for organizing data/experiments/workflows"
authors = [
    { name="altescy",  email="me@altescy.jp" },
]
license = "MIT"
readme = "README.md"
keywords=["python", "workflow"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "colt>=0.17.2",
    "dill",
    "filelock",
    "minato>=0.12",
    "pydantic>=2.0,<3.0",
    "pyyaml",
    "rich>=12.3",
    "rjsonnet",
]

[project.urls]
Homepage = "https://altescy.jp/formed"

[project.scripts]
formed = "formed.__main__:run"

[project.optional-dependencies]
ml = [
    "collatable>=0.4",
]
flax = [
    "cloudpickle",
    "flax>=0.9; python_version >= '3.10'",
    "flax<0.9; python_version < '3.10'",
]
mlflow = [
    "mlflow>=2.0",
    "numpy>=1.26.4",
    "scipy>=1.14; python_version >= '3.12'",
    "scipy>=1.13; python_version < '3.12'",
    "pyarrow>=18.0; python_version >= '3.12'",
    "pyarrow; python_version < '3.12'",
]
transformers = [
    "datasets>=2.0",
    "protobuf>=5.0",
    "transformers>=4.0",
]
sentence-transformers = [
    "datasets>=2.0",
    "sentence-transformers>=3.0; python_version >= '3.10'",
    "sentence-transformers>=3.0,<3.1; python_version < '3.10'",
    "transformers[torch]>=4.0",
]
all = [
    "collatable>=0.4",
    "cloudpickle",
    "datasets>=2.0",
    "flax>=0.9; python_version >= '3.10'",
    "flax<0.9; python_version < '3.10'",
    "mlflow>=2.0",
    "numpy>=1.26.4",
    "scipy>=1.14; python_version >= '3.12'",
    "scipy>=1.13; python_version < '3.12'",
    "protobuf>=5.0",
    "pyarrow>=18.0; python_version >= '3.12'",
    "pyarrow; python_version < '3.12'",
    "sentence-transformers>=3.0; python_version >= '3.10'",
    "sentence-transformers>=3.0,<3.1; python_version < '3.10'",
    "transformers[torch]>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pysen>=0.11.0",
    "black>=24.8.0",
    "isort>=5.13.2,<6.0",
    "flake8>=7.1.1",
    "mypy>=1.11.2",
    "types-pyyaml>=6.0.12.20240917",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-material>=9.5.49",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings[python]>=0.27.0",
    "pymdown-extensions>=10.13",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:mlflow.*",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:pydantic._internal.*",
]

[tool.pysen]
version = "0.11"

[tool.pysen-cli]
settings_dir = "."

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py39"
mypy_ignore_packages = ["jax._src.*"]
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[tool.pysen.lint.source]
  includes = ["."]
  excludes = [".venv/"]


[tool.black] # automatically generated by pysen
# pysen ignores and overwrites any modifications
line-length = 120
target-version = ["py39"]

[tool.isort] # automatically generated by pysen
# pysen ignores and overwrites any modifications
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true
